# sbgg-matrix

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: build.yml
src/: main.rs
