[package]
name = "sbgg-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
