[package]
name = "sbgg-matrix"
version = "0.1.0"
edition = "2024"
description = "Meow :3 Decide on your own names on a matrix server without uhhh having a matrix server..."

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
cached = { version = "0.56.0", features = ["async"] }
eyre = "0.6.12"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
